--- a/client/server/package.json
+++ b/client/server/package.json
@@ -14,6 +14,8 @@
     "fibers": "~0.6.9",
     "stylus": "~0.31.0",
     "coffee-script": "~1.4.0",
-    "express": "~3.0.4"
+    "express": "~3.0.4",
+    "q": "~0.8.12",
+    "nib": "~0.9.1"
   }
 }
