Flora bin working

--- a/client/server/package.json
+++ b/client/server/package.json
@@ -12,6 +12,7 @@
     "coffee-script": "~1.4.0",
     "express": "~3.0.4",
     "q": "~0.8.12",
-    "nib": "~0.9.1"
+    "nib": "~0.9.1",
+    "optimist": "~0.5.2"
   }
 }
