--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "BSD",
   "dependencies": {
-    "redis": "~0.8.3"
+    "redis": "~0.8.3",
+    "fibers": "~1.0.1"
   }
 }
