--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "redis": "~0.8.3",
     "fibers": "~1.0.1",
     "node-uuid": "~1.4.0",
-    "ws": "~0.4.25"
+    "ws": "~0.4.25",
+    "zmq": "~2.5.1"
   }
 }
