Handler and docs

--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "fibers": "~1.0.1",
     "node-uuid": "~1.4.0",
     "ws": "~0.4.25",
-    "zmq": "~2.5.1"
+    "zmq": "~2.5.1",
+    "minimist": "0.0.8"
   }
 }
