--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "private": true,
   "name": "flora",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "flora framework",
   "bin": {
     "flora": "./bin/flora"
