--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
   },
   "homepage": "https://github.com/ctrldavid/flora",
   "dependencies": {
-    "jade": "~1.3.0",
-    "fibers": "~1.0.1",
-    "stylus": "~0.42.3",
     "coffee-script": "~1.7.1",
     "express": "~3.4.8",
+    "fibers": "~1.0.1",
+    "jade": "~1.3.0",
+    "minimist": "0.0.8",
     "nib": "~1.0.2",
-    "redis": "~0.10.1",
     "node-uuid": "~1.4.1",
+    "react-tools": "^0.11.2",
+    "redis": "~0.10.1",
+    "stylus": "~0.42.3",
     "ws": "~0.4.31",
-    "zmq": "~2.6.0",
-    "minimist": "0.0.8"
+    "zmq": "~2.6.0"
   }
 }
